Added game save to and load from clipboard

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </table>
 <script src="script.js"></script>
 
-<BUTTON onclick="generateGrid();">Reset Grid</BUTTON>
-<BUTTON onclick="loadGrid();">Load Grid</BUTTON>
-<BUTTON onclick="saveGrid();">Save Grid</BUTTON>
+<BUTTON onclick="loadGame();">Load Game</BUTTON>
+<BUTTON onclick="saveGame();">Save Game</BUTTON>
 </body>
 </html>
